--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -9,7 +9,7 @@ ENV USERNAME=devuser \
 
 # --- Dependencias base
 RUN apt-get update && apt-get install -y \
-    sudo curl wget git zip unzip make build-essential cmake \
+    sudo curl wget git zip unzip make build-essential cmake net-tools \
     software-properties-common libssl-dev libffi-dev \
     libcurl4-openssl-dev libxml2-dev locales zlib1g-dev \
     zsh gnupg lsb-release ca-certificates apt-transport-https \
@@ -47,10 +47,23 @@ RUN Rscript -e "install.packages('remotes', repos='https://cloud.r-project.org')
 
 
 # --- Parte opcional: RStudio Server (comentada porque no funciona en Ubuntu 24.04)
-# RUN wget https://download2.rstudio.org/server/jammy/amd64/rstudio-server-2024.12.1-563-amd64.deb && \
-#     gdebi -n rstudio-server-2024.12.1-563-amd64.deb && \
-#     rm rstudio-server-2024.12.1-563-amd64.deb
-# RUN useradd -m $RSTUDIO_USER && echo "$RSTUDIO_USER:$RSTUDIO_PASSWORD" | chpasswd
+RUN wget https://s3.amazonaws.com/rstudio-ide-build/server/jammy/amd64/rstudio-server-2024.09.2-399-amd64.deb && \
+    gdebi -n rstudio-server-2024.09.2-399-amd64.deb && \
+    rm rstudio-server-2024.09.2-399-amd64.deb
+RUN useradd -m $RSTUDIO_USER && echo "$RSTUDIO_USER:$RSTUDIO_PASSWORD" | chpasswd
+
+# --- Crear script entrypoint directamente en el contenedor
+RUN echo '#!/bin/bash\n'\
+'echo "[ENTRYPOINT] Lanzando rserver como devuser"\n'\
+'/usr/lib/rstudio-server/bin/rserver --server-user=devuser --server-daemonize=0 &\n'\
+'exec "$@"' > /usr/local/bin/entrypoint.sh && chmod +x /usr/local/bin/entrypoint.sh
+# RUN echo '#!/bin/bash\n'\
+# 'echo "[ENTRYPOINT] Entrando en entrypoint.sh"\n'\
+# 'which rserver || echo "[ENTRYPOINT] ❌ rserver no encontrado"\n'\
+# 'ls -l /usr/lib/rstudio-server/bin/rserver\n'\
+# '/usr/lib/rstudio-server/bin/rserver --server-daemonize=0 &\n'\
+# 'echo "[ENTRYPOINT] 🎯 RStudio Server lanzado (en background)"\n'\
+# 'exec "$@"' > /usr/local/bin/entrypoint.sh && chmod +x /usr/local/bin/entrypoint.sh
 
 # --- Cambiar a devuser
 USER $USERNAME
@@ -60,4 +73,7 @@ WORKDIR /workspaces
 EXPOSE 8787
 EXPOSE 8888
 
+ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 CMD ["bash"]
+
+
