Add installation of uv in Dockerfile

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -21,6 +21,9 @@ RUN apt-get update && apt-get install -y pipx && \
     pipx install pipenv && \
     pipx install poetry
 
+# --- uv
+RUN curl -LsSf https://astral.sh/uv/install.sh | sh
+
 # --- Crear usuario no-root (si no existe)
 RUN if ! id -u $USERNAME > /dev/null 2>&1; then \
       useradd -m -s /bin/bash $USERNAME && \
