Add entrypoint script and makefile for Docker container setup

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -53,6 +53,9 @@ USER $USERNAME
 WORKDIR /workspaces
 EXPOSE 8888
 
+COPY entrypoint.sh /usr/local/bin/entrypoint.sh
+RUN chmod +x /usr/local/bin/entrypoint.sh
+
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 CMD ["bash"]
 
